--- a/index.html
+++ b/index.html
@@ -1,19 +1,59 @@
 <!doctype html>
-<html lang="nl">
+<html lang="en">
 	
 <head>
 	<meta charset="UTF-8">
-	<meta name="author" content="jouw naam">
+	<meta name="author" content="Marleen Bonhof">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	
-	<title>Howdy FED2122</title>
+	<title>FED2122 Patta</title>
 	
 	<link href="styles/style.css" rel="stylesheet">
 	<link rel="icon" type="image/svg+xml" href="images/favicon.svg">
+
 </head>
 
-<body>
-	<h1>Howdy FED2122</h1>
+
+<body class="index">
+
+<!-- Header -->
+	
+<header>
+	<a href="index.html"><img src="./images/pattalogo.png.webp" alt="headerLogo"></a>
+	<section>
+		<ul>
+			<img src="./images/bars-solid.svg">
+			<img src="./images/search-solid.svg">
+			<img src="./images/shopping-bag-solid.svg">
+		</ul>
+	</section>
+	<nav>
+		<ul>
+			<li><a href="index.html"> NEW ARRIVALS </a></li>
+			<li><a href="index.html"> AUTUMN WINTER 2021 </a></li>
+			<li><a href="index.html"> APPAREL </a></li>
+			<li><a href="index.html"> FOOTWEAR </a></li>
+		</ul>
+	</nav>
+</header>
+
+
+<!-- Home Page Content -->
+
+	<main>
+		<section>
+			<img src="images/aw21finalbanner_1512x.jpg.webp" alt="aw21banner">
+		</section>
+
+	</main>
+
+<!-- Footer -->
+
+	<footer>
+		<section>
+			<img src="./images/pattafooterlogo.jpg" alt="footerLogo">
+		</section>
+	</footer>
 
 	<script src="scripts/script.js"></script>
 </body>
