--- a/index.html
+++ b/index.html
@@ -19,20 +19,28 @@
 <!-- Header -->
 	
 <header>
-	<a href="index.html"><img src="./images/pattalogo.png.webp" alt="headerLogo"></a>
 	<section>
-		<ul>
-			<img src="./images/bars-solid.svg">
+		<img src="./images/bars-solid.svg">
+
+		<a href="index.html"><img src="./images/pattalogo.png.webp" class="logo" alt="headerLogo"></a>
+
+		<div>
 			<img src="./images/search-solid.svg">
 			<img src="./images/shopping-bag-solid.svg">
-		</ul>
+		</div>
 	</section>
+
 	<nav>
 		<ul>
+			<li><a href="index.html"> COMING SOON </a></li>
 			<li><a href="index.html"> NEW ARRIVALS </a></li>
-			<li><a href="index.html"> AUTUMN WINTER 2021 </a></li>
-			<li><a href="index.html"> APPAREL </a></li>
 			<li><a href="index.html"> FOOTWEAR </a></li>
+			<li><a href="index.html"> APPAREL </a></li>
+			<li><a href="index.html"> ACCESSORIES </a></li>
+			<li><a href="index.html"> COLLECTIONS </a></li>
+			<li><a href="index.html"> BRANDS </a></li>
+			<li><a href="index.html"> BLOG </a></li>
+			<li><a href="index.html"> RAFFLES </a></li>
 		</ul>
 	</nav>
 </header>
@@ -40,10 +48,12 @@
 
 <!-- Home Page Content -->
 
-	<main>
-		<section>
-			<img src="images/aw21finalbanner_1512x.jpg.webp" alt="aw21banner">
-		</section>
+	<main class="row">
+		<div class="first">
+            <img src="images/mainimage1-aj1.png" alt="aj1retrohighOG">
+            <img src="images/mainimage2-pattaT.webp" alt="pattaTshirt">
+			<img src="images/mainimage3-pattaT.webp" alt="pattaT">
+		</div>
 
 	</main>
 
@@ -51,8 +61,25 @@
 
 	<footer>
 		<section>
-			<img src="./images/pattafooterlogo.jpg" alt="footerLogo">
+		<img src="./images/pattafooterlogo.jpg" class="logo2" alt="footerLogo">
 		</section>
+
+		<section>
+			<h1>Subscribe to our newsletter</h1>
+		<ul>
+			<li>TERMS AND CONDITIONS</li>
+			<li>PRIVACY POLICY</li>
+			<li>REFUND POLICY</li>
+			<li>SUPPORT</li>
+			<li>STORES</li>
+			<li>JOBS</li>
+			<li>PATTA MOBILE APP</li>
+			<li>PATTA FOUNDATION</li>
+			<li>PATTA SOUNDSYSTEM</li>
+			<li>PATTA RUNNING TEAM</li>
+		  </ul>
+		  </section>
+
 	</footer>
 
 	<script src="scripts/script.js"></script>
