--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <!-- Header -->
 	
 <header>
-	<section>
+	<section tabindex="0" role="button" aria-pressed="false">
 		<img class="menuIcon" src="./images/bars-solid.svg" alt="menuIcon">
 
 		<a href="index.html"><img src="./images/pattalogo.png.webp" class="logo" alt="headerLogo"></a>
