--- a/index.html
+++ b/index.html
@@ -19,14 +19,14 @@
 <!-- Header -->
 	
 <header>
-	<section tabindex="0" role="button" aria-pressed="false">
-		<img class="menuIcon" src="./images/bars-solid.svg" alt="menuIcon">
+	<section>
+		<img tabindex="0" class="menuIcon" src="./images/bars-solid.svg" alt="menuIcon">
 
 		<a href="index.html"><img src="./images/pattalogo.png.webp" class="logo" alt="headerLogo"></a>
 
 		<div>
-			<img class="searchBar" src="./images/search-solid.svg" alt="searchBar">
-			<img class="shopCart" src="./images/shopping-bag-solid.svg" alt="shoppingBasket">
+			<img tabindex="0" class="searchBar" src="./images/search-solid.svg" alt="searchBar">
+			<img tabindex="0" class="shopCart" src="./images/shopping-bag-solid.svg" alt="shoppingBasket">
 		</div>
 	</section>
 
@@ -59,13 +59,13 @@
 	</nav>
 
 		<form>
-			<img src="./images/times-solid.svg" alt="exitSearch">
+			<img tabindex="0" src="./images/times-solid.svg" alt="exitSearch">
 			<label for="search"></label>
 			<input type="text" placeholder="Search" aria-label="Search through site">
 		</form>
 
 		<fieldset>
-			<img src="./images/times-circle-solid.svg" alt="exitBasket">
+			<img tabindex="0" src="./images/times-circle-solid.svg" alt="exitBasket">
 			<legend>Your cart</legend>
 			<label>Your bag is empty</label>
 		</fieldset>
