--- a/index.html
+++ b/index.html
@@ -77,9 +77,29 @@
 
 	<main class="row">
 		<div class="first">
+			<img src="images/mainimage0.jpg.webp" alt="springsummer22">
+			<p><a href="product.html">SHOP THE FIRST DROP OF 2022 HERE</a></p>
             <img src="images/mainimage1-aj1.png" alt="aj1retrohighOG">
             <img src="images/mainimage2-pattaT.webp" alt="pattaTshirtWhite">
 			<img src="images/mainimage3-pattaT.webp" alt="pattaTshirtBlack">
+		</div>
+		<div class="second">
+			<img src="images/mainimage4-allfootwear.webp" alt="allfootwear">
+			<img src="images/mainimage5-pattasoundsystem.webp" alt="pattaSoundSystem">
+			<img src="images/mainimage6-pattaheroesT.webp" alt="pattaHeroesT">
+			<img src="images/mainimage7.jpg.webp" alt="vansZooSkool">
+		</div>
+		<div>
+			<img src="images/mainimage8.jpg.webp" alt="pattaJacket">
+			<img src="images/mainimage9.jpg.webp" alt="patta14kLearring">
+			<img src="images/mainimage10.jpg.webp" alt="patta14kPearring">
+			<img src="images/mainimage11.jpg.webp" alt="pattaSilverLearring">
+		</div>
+		<div>
+			<img src="images/mainimage12.jpg.webp" alt="pattaSilverPearring">
+			<img src="images/mainimage13.jpg.webp" alt="pattaPlatedLearring">
+			<img src="images/mainimage14.jpg.webp" alt="pattaPlatedPearring">
+			<img src="images/mainimage15.jpg.webp" alt="pattaMA1jacket">
 		</div>
 
 	</main>
