--- a/product.html
+++ b/product.html
@@ -72,6 +72,22 @@
 
 		<div class="productinfo">
 			<h2>€250,00</h2>
+			<div class="custom-select">
+				<select>
+					<option selected disabled>SELECT YOUR SIZE</option>
+					<option value="">EU 36</option>
+					<option value="">EU 36.5</option>
+					<option value="">EU 37</option>
+					<option value="">EU 37.5</option>
+					<option value="">EU 38</option>
+					<option value="">EU 38.5</option>
+					<option value="">EU 39</option>
+					<option value="">EU 40</option>
+				</select>
+				<span class="custom-arrow"></span>
+			</div>
+			<button>ADD TO CART</button>
+			
 		<details>
 			<summary>DESCRIPTION</summary>
 			<p>The creative relationship between <b>Jordan</b> and influencer <b>Aleali May</b> takes another step forward with a new women's version of the iconic <b>Air Jordan 14 Retro Low</b>.</p>
