--- a/product.html
+++ b/product.html
@@ -71,7 +71,7 @@
 		</div>
 
 		<div class="productinfo">
-			<h2>€250,00</h2>
+			<h2>€250,00</h2> <em>NEW</em>
 			<div class="custom-select">
 				<select>
 					<option selected disabled>SELECT YOUR SIZE</option>
