--- a/index.html
+++ b/index.html
@@ -76,30 +76,30 @@
 <!-- Home Page Content -->
 
 	<main class="row">
-		<div class="first">
+		<div>
 			<img src="images/mainimage0.jpg.webp" alt="springsummer22">
 			<p><a href="product.html">SHOP THE FIRST DROP OF 2022 HERE</a></p>
-            <img src="images/mainimage1-aj1.png" alt="aj1retrohighOG">
-            <img src="images/mainimage2-pattaT.webp" alt="pattaTshirtWhite">
-			<img src="images/mainimage3-pattaT.webp" alt="pattaTshirtBlack">
-		</div>
-		<div class="second">
-			<img src="images/mainimage4-allfootwear.webp" alt="allfootwear">
-			<img src="images/mainimage5-pattasoundsystem.webp" alt="pattaSoundSystem">
-			<img src="images/mainimage6-pattaheroesT.webp" alt="pattaHeroesT">
-			<img src="images/mainimage7.jpg.webp" alt="vansZooSkool">
+            <img src="images/mainimage1-aj1.png" alt="aj1retrohighOG" class="img1">
+            <img src="images/mainimage2-pattaT.webp" alt="pattaTshirtWhite" class="img2">
+			<img src="images/mainimage3-pattaT.webp" alt="pattaTshirtBlack" class="img3">
 		</div>
 		<div>
-			<img src="images/mainimage8.jpg.webp" alt="pattaJacket">
-			<img src="images/mainimage9.jpg.webp" alt="patta14kLearring">
-			<img src="images/mainimage10.jpg.webp" alt="patta14kPearring">
-			<img src="images/mainimage11.jpg.webp" alt="pattaSilverLearring">
+			<img src="images/mainimage4-allfootwear.webp" alt="allfootwear" class="img4">
+			<img src="images/mainimage5-pattasoundsystem.webp" alt="pattaSoundSystem" class="img5">
+			<img src="images/mainimage6-pattaheroesT.webp" alt="pattaHeroesT" class="img6">
+			<img src="images/mainimage7.jpg.webp" alt="vansZooSkool" class="img7">
 		</div>
 		<div>
-			<img src="images/mainimage12.jpg.webp" alt="pattaSilverPearring">
-			<img src="images/mainimage13.jpg.webp" alt="pattaPlatedLearring">
-			<img src="images/mainimage14.jpg.webp" alt="pattaPlatedPearring">
-			<img src="images/mainimage15.jpg.webp" alt="pattaMA1jacket">
+			<img src="images/mainimage8.jpg.webp" alt="pattaJacket" class="img8">
+			<img src="images/mainimage9.jpg.webp" alt="patta14kLearring" class="img9">
+			<img src="images/mainimage10.jpg.webp" alt="patta14kPearring" class="img10">
+			<img src="images/mainimage11.jpg.webp" alt="pattaSilverLearring" class="img11">
+		</div>
+		<div>
+			<img src="images/mainimage12.jpg.webp" alt="pattaSilverPearring" class="img12">
+			<img src="images/mainimage13.jpg.webp" alt="pattaPlatedLearring" class="img13">
+			<img src="images/mainimage14.jpg.webp" alt="pattaPlatedPearring" class="img14">
+			<img src="images/mainimage15.jpg.webp" alt="pattaMA1jacket" class="img15">
 		</div>
 
 	</main>
