--- a/index.html
+++ b/index.html
@@ -109,23 +109,23 @@
 		<section>
 			<span><img src="./images/pattafooterlogo.jpg" class="logo2" alt="footerLogo"></span>
 
-			<form>
-				<br><label for="email">Subscribe to our newsletter</label><br>
+			<fieldset>
+				<label for="email">Subscribe to our newsletter</label>
 				<input type="email" id="email" name="email" placeholder="Email Address">
-			</form>
+			</fieldset>
 
 
 		<ul>
-			<li>TERMS AND CONDITIONS</li>
-			<li>PRIVACY POLICY</li>
-			<li>REFUND POLICY</li>
-			<li>SUPPORT</li>
-			<li>STORES</li>
-			<li>JOBS</li>
-			<li>PATTA MOBILE APP</li>
-			<li>PATTA FOUNDATION</li>
-			<li>PATTA SOUNDSYSTEM</li>
-			<li>PATTA RUNNING TEAM</li>
+			<li><a href="">TERMS AND CONDITIONS</a></li>
+			<li><a href="">PRIVACY POLICY</a></li>
+			<li><a href="">REFUND POLICY</a></li>
+			<li><a href="">SUPPORT</a></li>
+			<li><a href="">STORES</a></li>
+			<li><a href="">JOBS</a></li>
+			<li><a href="">PATTA MOBILE APP</a></li>
+			<li><a href="">PATTA FOUNDATION</a></li>
+			<li><a href="">PATTA SOUNDSYSTEM</a></li>
+			<li><a href="">PATTA RUNNING TEAM</a></li>
 		</ul>
 		</section>
 
