--- a/index.html
+++ b/index.html
@@ -79,23 +79,23 @@
 		<div>
 			<figure><img src="images/mainimage0.jpg.webp" alt="springsummer22"></figure>
 			<p><a href="product.html">SHOP THE FIRST DROP OF 2022 HERE</a></p>
-            <figure><img src="images/mainimage1-aj1.png" alt="aj1retrohighOG" class="img1"><figcaption>Air Jordan 1 Retro High</figcaption></figure>
-            <figure><img src="images/mainimage2-pattaT.webp" alt="pattaTshirtWhite" class="img2"></figure><figcaption>Patta Independent T-Shirt (White)</figcaption>
-			<figure><img src="images/mainimage3-pattaT.webp" alt="pattaTshirtBlack" class="img3"><figcaption>Patta Independent T-Shirt (Black)</figcaption></figure>
+            <figure><img src="images/mainimage1-aj1.png" alt="aj1retrohighOG" class="img1"><figcaption>Air Jordan 1 Retro High <b>Sold out</b></figcaption></figure>
+            <figure><img src="images/mainimage2-pattaT.webp" alt="pattaTshirtWhite" class="img2"></figure><figcaption>Patta Independent T-Shirt (White) <b>€45,00</b></figcaption>
+			<figure><img src="images/mainimage3-pattaT.webp" alt="pattaTshirtBlack" class="img3"><figcaption>Patta Independent T-Shirt (Black) <b>€45,00</b></figcaption></figure>
 		
 			<figure><img src="images/mainimage4-allfootwear.webp" alt="allfootwear" class="img4"></figure>
 			<figure><img src="images/mainimage5-pattasoundsystem.webp" alt="pattaSoundSystem" class="img5"></figure>
-			<figure><img src="images/mainimage6-pattaheroesT.webp" alt="pattaHeroesT" class="img6"><figcaption>Patta Heroes T-Shirt (White)</figcaption></figure>
-			<figure><img src="images/mainimage7.jpg.webp" alt="vansZooSkool" class="img7"><figcaption>Vans Mid Zoo Skool VLT LX (White/Brown)</figcaption></figure>
+			<figure><img src="images/mainimage6-pattaheroesT.webp" alt="pattaHeroesT" class="img6"><figcaption>Patta Heroes T-Shirt (White) <b>€45,00</b></figcaption></figure>
+			<figure><img src="images/mainimage7.jpg.webp" alt="vansZooSkool" class="img7"><figcaption>Vans Mid Zoo Skool VLT LX (White/Brown) <b>Sold out</b></figcaption></figure>
 		
-			<figure><img src="images/mainimage8.jpg.webp" alt="pattaJacket" class="img8"><figcaption>Patta Cartoon Canvas Jacket (Pale Khaki)</figcaption></figure>
-			<figure><img src="images/mainimage9.jpg.webp" alt="patta14kLearring" class="img9"><figcaption>Patta Script Logo 14K Earring (Gold)</figcaption></figure>
-			<figure><img src="images/mainimage10.jpg.webp" alt="patta14kPearring" class="img10"><figcaption>Patta Script P 14K Earring (Gold)</figcaption></figure>
-			<figure><img src="images/mainimage11.jpg.webp" alt="pattaSilverLearring" class="img11"><figcaption>Patta Script Logo Silver Earring (Silver)</figcaption></figure>
+			<figure><img src="images/mainimage8.jpg.webp" alt="pattaJacket" class="img8"><figcaption>Patta Cartoon Canvas Jacket (Pale Khaki) <b>€140,00</b></figcaption></figure>
+			<figure><img src="images/mainimage9.jpg.webp" alt="patta14kLearring" class="img9"><figcaption>Patta Script Logo 14K Earring (Gold) <b>€180,00</b></figcaption></figure>
+			<figure><img src="images/mainimage10.jpg.webp" alt="patta14kPearring" class="img10"><figcaption>Patta Script P 14K Earring (Gold) <b>€110,00</b></figcaption></figure>
+			<figure><img src="images/mainimage11.jpg.webp" alt="pattaSilverLearring" class="img11"><figcaption>Patta Script Logo Silver Earring (Silver) <b>€35,00</b></figcaption></figure>
 		
-			<figure><img src="images/mainimage12.jpg.webp" alt="pattaSilverPearring" class="img12"><figcaption>Patta Script P Silver Earring (Silver)</figcaption></figure>
-			<figure><img src="images/mainimage13.jpg.webp" alt="pattaPlatedLearring" class="img13"><figcaption>Patta Script Logo Plated Earring (Gold)</figcaption></figure>
-			<figure><img src="images/mainimage14.jpg.webp" alt="pattaPlatedPearring" class="img14"><figcaption>Patta Script P Plated Earring (Gold)</figcaption></figure>
+			<figure><img src="images/mainimage12.jpg.webp" alt="pattaSilverPearring" class="img12"><figcaption>Patta Script P Silver Earring (Silver) <b>€30,00</b></figcaption></figure>
+			<figure><img src="images/mainimage13.jpg.webp" alt="pattaPlatedLearring" class="img13"><figcaption>Patta Script Logo Plated Earring (Gold) <b>€45,00</b></figcaption></figure>
+			<figure><img src="images/mainimage14.jpg.webp" alt="pattaPlatedPearring" class="img14"><figcaption>Patta Script P Plated Earring (Gold) <b>€40,00</b></figcaption></figure>
 			<figure><img src="images/mainimage15.jpg.webp" alt="pattaMA1jacket" class="img15"><figcaption>Patta x Alpha Industries MA-1 Jacket Lookbook</figcaption></figure>
 		</div>
 
