--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 			<figure><img src="images/mainimage12.jpg.webp" alt="pattaSilverPearring" class="img12"><figcaption>Patta Script P Silver Earring (Silver) <b>€30,00</b></figcaption></figure>
 			<figure><img src="images/mainimage13.jpg.webp" alt="pattaPlatedLearring" class="img13"><figcaption>Patta Script Logo Plated Earring (Gold) <b>€45,00</b></figcaption></figure>
 			<figure><img src="images/mainimage14.jpg.webp" alt="pattaPlatedPearring" class="img14"><figcaption>Patta Script P Plated Earring (Gold) <b>€40,00</b></figcaption></figure>
-			<figure><img src="images/mainimage15.jpg.webp" alt="pattaMA1jacket" class="img15"><figcaption>Patta x Alpha Industries MA-1 Jacket Lookbook</figcaption></figure>
+			<figure><img src="images/mainimage15.jpg.webp" alt="pattaMA1jacket" class="img15"><figcaption><b>Patta x Alpha Industries MA-1 Jacket Lookbook</b></figcaption></figure>
 		</div>
 
 	</main>
